--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
+    "chalk": "^1.1.3",
     "redux-logger": "^2.7.4",
     "volleyball": "^1.4.1",
     "webpack": "^1.14.0"
