--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "node-tweet-stream": "^2.0.1",
     "react": "^15.4.2",
@@ -30,6 +31,7 @@
     "react-redux-webaudio": "^0.0.8",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
-    "socket.io": "^1.7.2"
+    "socket.io": "^1.7.2",
+    "watson-developer-cloud": "^2.15.2"
   }
 }
